juice-shop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: juice-shop
  name: juice-shop
  namespace: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - image: bkimminich/juice-shop
        imagePullPolicy: Always
        name: juice-shop-container
        ports:
        - containerPort: 3000
