juice-shop-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: juice-shop.com
      http:
        paths:
          - path: /juice-shop
            pathType: Prefix
            backend:
              service:
                name: juice-shop-entrypoint
                port:
                  name: http
